# bachelor-autoconfig-shematisation

./: .gitignore  Dockerfile  LICENSE  README.md  dataset.csv  docker-compose.yml  main.py  requirements.txt
config/: R0.txt  router1.txt
configExtractor/: pytermi.py
lib/pka2xml_py/: .gitignore  2.pkt  3.pkt  README.md  build.sh  cli.py  ex.pkt  ex3.pkt  exemple.xml  exemple3.xml  post_build.sh  setup.py
lib/pka2xml_py/cpp_binding/: CMakeLists.txt  bindings.cpp
lib/pka2xml_py/cpp_binding/include/: pka2xml.hpp
models/: Device.py  Interface.py  Link.py  Router.py  Switch.py
models/factory/: DeviceFactory.py
resources/pkt/: 2.pkt  2.xml
resources/xml/: 2.xml  base.xml  empty.xml  generated.xml  link.xml  pc.xml  router.xml  switch.xml
src/: app.py  main.py  main2.py
src/IA/llm/: config_analyzer.py  prompt_template.txt  rapport.txt
src/IA/training/: config_feature_parser.py  dataset.csv  train_naive_bayes.py
src/config/: cdpsw.txt
src/configExtractor/: pytermi.py  readme.md
src/configs/: parser_config.py
src/configs/extract/: pytermi.py
src/configs/save/: save_configs_to_mongo.py
src/data/config/: R1.txt  switch.txt
src/models/: Device.py  Link.py  Router.py  Switch.py
src/models/factory/: DeviceFactory.py
src/resources/xml/: crossLink.xml  note.xml  rectangleRed.xml  rectangleWhite.xml  router.xml  switch.xml
src/topologie/: TopologyExecutor.py
src/topologie/converter/: parser_config.py  pkt2xml.py
topologie/converter/: parser_config.py  pka2xml_wrapper.py  pkt2xml.py
topologie/draw/: PktBuilder.py  pkt_generator.py
(+92 files in other folders)
